--- a/Castaway_web/index.html
+++ b/Castaway_web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Castaway</title>
 </head>
 <!-- header -->
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="home__content">
                 <div class="home__content-image">
-                    <img src="img/IMAGE.png" alt="Podcast">
+                    <img src="/img/IMAGE.png" alt="Podcast">
                 </div>
                 <div class="home__content-text">
                     <h1>Take your podcast to the <span class="next">next</span> <span class="level">level</span></h1>
@@ -153,7 +153,7 @@
                 <div class="episods__content-cards">
                     <div class="card">
                         <div class="card__content">
-                            <img src="img/IMAGE-1.png" alt="" class="card__content-image">
+                            <img src="/img/IMAGE-1.png" alt="" class="card__content-image">
                             <div class="card__content-text card__text">
                                 <p class="card__text-category" id="gear">Gear</p>
                                 <p class="card__text-episode">Episode 3</p>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="card">
                         <div class="card__content">
-                            <img src="img/IMAGE-3.png" alt="" class="card__content-image">
+                            <img src="/img/IMAGE-3.png" alt="" class="card__content-image">
                             <div class="card__content-text card__text">
                                 <p class="card__text-category" id="tips">Tips & Tricks</p>
                                 <p class="card__text-episode">Episode 2</p>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="card">
                         <div class="card__content">
-                            <img src="img/IMAGE-2.png" alt="" class="card__content-image">
+                            <img src="/img/IMAGE-2.png" alt="" class="card__content-image">
                             <div class="card__content-text card__text">
                                 <p class="card__text-category" id="gear">Gear</p>
                                 <p class="card__text-episode">Episode 1</p>
@@ -207,7 +207,7 @@
                     <p class="jacob__text-info">Jacob has a background in audio engineering, and has been podcasting since the early days.</p>
                     <p class="jacob__text-info">He’s here to help you level up your game by sharing everything he’s learned along the way.</p>
                 </div>
-                <img src="img/IMAGE-4.png" alt="jacob" class="jacob__content-image">
+                <img src="/img/IMAGE-4.png" alt="jacob" class="jacob__content-image">
             </div>
         </div>
     </div>
@@ -508,6 +508,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
